--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   flex_color_picker: ^3.2.2
   flutter_rating_bar: ^4.0.1
+  flutter_file_dialog: ^3.0.0
+  csv: ^5.0.2
 
 dev_dependencies:
   flutter_test:
