--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,9 +38,13 @@ dependencies:
   flex_color_picker: ^3.2.2
   flutter_rating_bar: ^4.0.1
   flutter_file_dialog: ^3.0.0
+  flutter_staggered_grid_view: ^0.7.0
   csv: ^5.0.2
   file_picker: ^6.1.1
   shared_preferences: ^2.2.2
+  camera: ^0.10.5+9
+  path_provider: ^2.1.2
+  path: ^1.9.0
 
 dev_dependencies:
   flutter_test:
