--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   camera: ^0.10.5+9
   path_provider: ^2.1.2
   path: ^1.9.0
+  permission_handler: ^11.3.0
 
 dev_dependencies:
   flutter_test:
