--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,9 +47,17 @@ dependencies:
   path: ^1.9.0
   permission_handler: ^11.3.0
 
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: ^0.13.1
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "/images/LogoM.jpg"
+
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
