--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,7 +44,7 @@ dependencies:
   shared_preferences: ^2.2.2
   camera: ^0.10.5+9
   path_provider: ^2.1.2
-  path: 1.8.3
+  path: ^1.9.0
   permission_handler: ^11.3.0
 
 
