--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
-name: flutter_form_elements
-description: A new Flutter project.
+name: mercs_scout
+description: Scouting Data Collection app for Mercenary Robotics
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
@@ -31,10 +31,6 @@ dependencies:
   flutter:
     sdk: flutter
 
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
   flex_color_picker: ^3.2.2
   flutter_rating_bar: ^4.0.1
   flutter_file_dialog: ^3.0.0
@@ -42,22 +38,14 @@ dependencies:
   csv: ^6.0.0
   file_picker: ^6.2.0
   shared_preferences: ^2.2.2
-  camera: ^0.10.5+9
   path_provider: ^2.1.2
   path: ^1.9.0
-  permission_handler: ^11.3.0
   qr_flutter: ^4.1.0
 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_launcher_icons: ^0.13.1
-
-flutter_launcher_icons:
-  android: "launcher_icon"
-  ios: true
-  image_path: "/images/LogoM.jpg"
 
 
   # The "flutter_lints" package below contains a set of recommended lints to
@@ -81,8 +69,6 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
      - images/mercs.png
-     - images/Field Blue 2024.png
-     - images/Field Red 2024.png
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
